--- a/data/effect_emblem.yaml
+++ b/data/effect_emblem.yaml
@@ -198,3 +198,25 @@
   apply:
     type: disableContext
     target: addMarkContext
+- id: effect_emblem_add_xingzhili_duration
+  trigger: OnBeforeAddMark
+  priority: 0
+  condition:
+    type: every
+    conditions:
+      - type: selfAddMark
+      - type: evaluate
+        target:
+          base: addMarkContext
+          chain:
+            - type: select
+              arg:
+                type: dynamic
+                arg: baseMark.id
+        evaluator:
+          type: same
+          value: mark_xingzhili
+  apply:
+    type: setMarkDuration
+    target: addMarkContext
+    value: 10
