--- a/data/skill.yaml
+++ b/data/skill.yaml
@@ -1811,3 +1811,155 @@
   effect:
     - effect_skill_heal_self_eighth
     - effect_skill_heal_self_by_kongqi
+- id: skill_fengli
+  element: Normal
+  category: Status
+  power: 0
+  rage: 10
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_atk_1_stages
+- id: skill_quanlichongzhuang
+  element: Normal
+  category: Physical
+  power: 90
+  rage: 10
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_power_on_consecutive_hits_10_max_20
+- id: skill_xingzhiwei
+  element: Normal
+  category: Physical
+  power: 70
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: true
+  tags: []
+- id: skill_yingjiachongding
+  element: Normal
+  category: Physical
+  power: 95
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_self_yuansuzhufu_increase_on_consecutive_hits_10_max_20
+- id: skill_pensheshuizhu
+  element: Water
+  category: Special
+  power: 60
+  rage: 15
+  accuracy: 95
+  priority: 1
+  sureHit: false
+  ignoreShield: false
+  tags: []
+- id: skill_weishe
+  element: Normal
+  category: Status
+  power: 0
+  rage: 25
+  accuracy: 50
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_haipa
+- id: skill_shuangxingzhiwei
+  element: Normal
+  category: Physical
+  power: 50
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: true
+  multihit: 2
+  tags: []
+- id: skill_fengkuanglianchong
+  element: Normal
+  category: Physical
+  power: 40
+  rage: 20
+  accuracy: 90
+  sureHit: false
+  ignoreShield: false
+  multihit: 3
+  tags: []
+  effect:
+    - effect_skill_reduce_multihit_on_consecutive_hits_1_max_2
+- id: skill_bomingyiji
+  element: Normal
+  category: Physical
+  power: 120
+  rage: 25
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_self_damage_25_percent
+- id: skill_nuhailiantao
+  element: Water
+  category: Climax
+  power: 30
+  rage: 100
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  multihit: 5
+  tags: []
+- id: skill_talangchongji
+  element: Water
+  category: Physical
+  power: 120
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_damage_on_consecutive_hits_10_percent_max_2
+- id: skill_xingzhili
+  element: Normal
+  category: Status
+  power: 0
+  rage: 15
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_xingzhili
+- id: skill_sisui
+  element: Normal
+  category: Status
+  power: 0
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_foe_def_1_stage
+    - effect_skill_reduce_foe_spa_1_stage
+- id: skill_yongbuyanbai
+  element: Normal
+  category: Status
+  power: 0
+  rage: 25
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_heal_self_quarter
+    - effect_skill_clear_status
