--- a/data/effect_mark.yaml
+++ b/data/effect_mark.yaml
@@ -394,6 +394,27 @@
             arg:
               type: base
               arg: stack
+- id: effect_mark_increase_damage_taken_once
+  trigger: OnBeforeCalculateDamage
+  condition:
+    type: selfBeDamaged
+  priority: 0
+  apply:
+    - type: addModified
+      target:
+        base: damageContext
+      delta: 0
+      percent:
+        type: dynamic
+        selector:
+          base: mark
+          chain:
+            - type: select
+              arg:
+                type: base
+                arg: stack
+    - type: destroyMark
+      target: mark
 - id: effect_mark_self_damage_on_expire
   trigger: OnMarkDurationEnd
   priority: 0
@@ -865,3 +886,28 @@
     mark:
       type: entity:baseMark
       value: mark_zhongdu
+- id: effect_mark_disabled_xingzhili_effect
+  trigger: BeforeEffect
+  priority: 0
+  condition:
+    type: every
+    conditions:
+      - type: evaluate
+        target:
+          base: effectContext
+          chain:
+            - type: select
+              arg:
+                type: dynamic
+                arg: effect
+            - type: select
+              arg:
+                type: base
+                arg: tags
+            - type: flat
+        evaluator:
+          type: contain
+          tag: xingzhili
+  apply:
+    type: disableContext
+    target: effectContext
