--- a/data/mark.yaml
+++ b/data/mark.yaml
@@ -522,7 +522,33 @@
   effect:
     - effect_mark_when_attacked_add_foe_mark_zhongdu_50_percent
 - id: mark_yuansuzhufu
+  config:
+    duration: -1
+    persistent: true
+    maxStacks: 1
+    stackable: false
+    stackStrategy: max
+    destroyable: true
+    isShield: false
+    keepOnSwitchOut: true
+    transferOnSwitch: false
+    inheritOnFaint: false
+  effect:
+    - effect_mark_increase_damage_taken_once
 - id: mark_xingzhili
+  config:
+    duration: 5
+    persistent: false
+    maxStacks: 1
+    stackable: false
+    stackStrategy: refresh
+    destroyable: true
+    isShield: false
+    keepOnSwitchOut: true
+    transferOnSwitch: false
+    inheritOnFaint: false
+  effect:
+    - effect_mark_disabled_xingzhili_effect
 - id: mark_mianyibuliang
 - id: mark_shanghaizengjia
 - id: mark_huoxishanghaizengjia
