--- a/data/effect_mark.yaml
+++ b/data/effect_mark.yaml
@@ -892,6 +892,7 @@
   condition:
     type: every
     conditions:
+      - type: checkSelf
       - type: evaluate
         target:
           base: effectContext
