--- a/data/mark_ability.yaml
+++ b/data/mark_ability.yaml
@@ -52,6 +52,7 @@
   effect:
     - effect_ability_add_power_50_percent_normal
 - id: mark_ability_chaoshi
+  config: *ablitity_config
 - id: mark_ability_ranshao
 - id: mark_ability_xuanyun
 - id: mark_ability_yangyan
