--- a/data/mark_emblem.yaml
+++ b/data/mark_emblem.yaml
@@ -52,6 +52,7 @@
   effect:
     - effect_emblem_add_xingzhili_duration
 - id: mark_emblem_zhenji
+  config: *emblem_config
 - id: mark_emblem_yiran
 - id: mark_emblem_xuanyun
 - id: mark_emblem_weiyan
