--- a/data/mark_global.yaml
+++ b/data/mark_global.yaml
@@ -14,6 +14,8 @@
     - effect_global_power_35_percent_grass_light
 - id: mark_global_yutian
   config: *global_config
+  effect:
+    - effect_global_power_35_percent_water
 - id: mark_global_yanre
   config: *global_config
 - id: mark_global_baofengxue
