--- a/data/effect_mark.yaml
+++ b/data/effect_mark.yaml
@@ -912,3 +912,29 @@
   apply:
     type: disableContext
     target: effectContext
+- id: effect_mark_onDestroy_add_mark_shanghaizengjia
+  trigger: OnMarkDestroy
+  priority: 0
+  apply:
+    type: addMark
+    target: self
+    mark:
+      type: entity:baseMark
+      value: mark_shanghaizengjia
+- id: effect_mark_reflect_damage_1_4
+  trigger: OnDamage
+  condition:
+    type: selfBeDamaged
+  priority: 0
+  apply:
+    - type: dealDamage
+      target: foe
+      value:
+        type: dynamic
+        selector:
+          base: damageContext
+          chain:
+            - type: selectPath
+              arg: damageResult
+            - type: divide
+              arg: 4
