--- a/data/effect_skill.yaml
+++ b/data/effect_skill.yaml
@@ -420,7 +420,7 @@
       type: entity:baseMark
       value: mark_busi
   condition: *condition_self_use_skill_template
-- id: effect_skill_add_mark_yanzhiyizhi
+- id: effect_skill_add_mark_weilifanbei
   trigger: OnHit
   priority: 0
   apply:
@@ -2565,5 +2565,204 @@
     mark:
       type: entity:baseMark
       value: mark_xingzhili
+  condition:
+    type: selfUseSkill
+- id: effect_skill_add_mark_shuiwenzhenji
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: self
+    mark:
+      type: entity:baseMark
+      value: mark_shuiwenzhenji
+  condition:
+    type: selfUseSkill
+- id: effect_skill_consume_shuiwenzhenji
+  trigger: OnHit
+  priority: -50
+  apply:
+    type: consumeStacks
+    target:
+      base: selfMarks
+      chain:
+        - type: whereAttr
+          extractor:
+            type: base
+            arg: baseId
+          evaluator:
+            type: same
+            value: mark_shuiwenzhenji
+    value: 1
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: evaluate
+        target:
+          base: selfMarks
+          chain:
+            - type: whereAttr
+              extractor:
+                type: base
+                arg: baseId
+              evaluator:
+                type: same
+                value: mark_shuiwenzhenji
+        evaluator:
+          type: exist
+- id: effect_skill_add_crit_rate_50_shuiwenzhenji
+  trigger: AfterUseSkillCheck
+  priority: 0
+  apply:
+    type: addCritRate
+    target:
+      base: usingSkillContext
+    value: 50
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: evaluate
+        target:
+          base: selfMarks
+          chain:
+            - type: whereAttr
+              extractor:
+                type: base
+                arg: baseId
+              evaluator:
+                type: same
+                value: mark_shuiwenzhenji
+        evaluator:
+          type: exist
+- id: effect_skill_add_crit_rate_70_shuiwenzhenji
+  trigger: AfterUseSkillCheck
+  priority: 0
+  apply:
+    type: addCritRate
+    target:
+      base: usingSkillContext
+    value: 70
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: evaluate
+        target:
+          base: selfMarks
+          chain:
+            - type: whereAttr
+              extractor:
+                type: base
+                arg: baseId
+              evaluator:
+                type: same
+                value: mark_shuiwenzhenji
+        evaluator:
+          type: exist
+- id: effect_skill_sure_crit_shuiwenzhenji
+  trigger: AfterUseSkillCheck
+  priority: 0
+  apply:
+    type: setSureCrit
+    target:
+      base: usingSkillContext
+    priority: 0
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: evaluate
+        target:
+          base: selfMarks
+          chain:
+            - type: whereAttr
+              extractor:
+                type: base
+                arg: baseId
+              evaluator:
+                type: same
+                value: mark_shuiwenzhenji
+        evaluator:
+          type: exist
+- id: effect_skill_reduce_foe_atk_1_stage_30_percent
+  trigger: BeforeHit
+  priority: 0
+  apply:
+    <<: *apply_foe_statstage_-1_template
+    statType: atk
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - &condition_probability_30_percent_template
+        type: evaluate
+        target: self
+        evaluator:
+          type: probability
+          percent: 30
+- id: effect_skill_add_mark_shuiwenpingzhang
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: self
+    mark:
+      type: entity:baseMark
+      value: mark_shuiwenpingzhang
+    stack:
+      type: dynamic
+      selector:
+        base: self
+        chain:
+          - type: select
+            arg:
+              type: base
+              arg: maxHp
+          - type: divide
+            arg: 4
+  condition:
+    type: selfUseSkill
+- id: effect_skill_add_mark_foe_nishui_30_percent
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: foe
+    mark:
+      type: entity:baseMark
+      value: mark_nishui
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - &condition_probability_30_percent_template
+        type: evaluate
+        target: self
+        evaluator:
+          type: probability
+          percent: 30
+      - *condition_foe_not_water_element
+- id: effect_skill_set_weather_yutian
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: battle
+    mark:
+      type: entity:baseMark
+      value: mark_global_yutian
+  condition:
+    type: selfUseSkill
+- id: effect_skill_add_mark_fantan
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: self
+    mark:
+      type: entity:baseMark
+      value: mark_fantan
   condition:
     type: selfUseSkill
