--- a/data/skill.yaml
+++ b/data/skill.yaml
@@ -335,7 +335,7 @@
   ignoreShield: false
   tags: []
   effect:
-    - effect_skill_add_mark_yanzhiyizhi
+    - effect_skill_add_mark_weilifanbei
 - id: skill_juechufengsheng
   element: Normal
   category: Physical
@@ -1963,3 +1963,163 @@
   effect:
     - effect_skill_heal_self_quarter
     - effect_skill_clear_stage
+- id: skill_hailang
+  element: Water
+  category: Special
+  power: 60
+  accuracy: 95
+  rage: 5
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_foe_spa_5_percent
+- id: skill_shuiwenzhenji
+  element: Water
+  category: Physical
+  power: 60
+  accuracy: 95
+  rage: 10
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_shuiwenzhenji
+- id: skill_jiangu
+  element: Normal
+  category: Status
+  power: 0
+  accuracy: 100
+  rage: 10
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_def_1_stages
+- id: skill_hailangzhenji
+  element: Water
+  category: Physical
+  power: 70
+  accuracy: 95
+  rage: 10
+  sureHit: false
+  ignoreShield: false
+  tags: ['consume_shuiwenzhenji']
+  effect:
+    - effect_skill_add_crit_rate_50_shuiwenzhenji
+    - effect_skill_consume_shuiwenzhenji
+- id: skill_shuiwenpingzhang
+  element: Water
+  category: Status
+  power: 0
+  accuracy: 100
+  rage: 15
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_shuiwenpingzhang
+- id: skill_shentouzhenji
+  element: Water
+  category: Physical
+  power: 80
+  accuracy: 95
+  rage: 15
+  sureHit: false
+  ignoreShield: false
+  tags: ['consume_shuiwenzhenji']
+  effect:
+    - effect_skill_add_crit_rate_70_shuiwenzhenji
+    - effect_skill_consume_shuiwenzhenji
+- id: skill_xushuipao
+  element: Water
+  category: Special
+  power: 90
+  accuracy: 95
+  rage: 15
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_nishui_30_percent
+- id: skill_pubuzhenji
+  element: Water
+  category: Physical
+  power: 90
+  accuracy: 90
+  rage: 15
+  sureHit: false
+  ignoreShield: false
+  tags: ['consume_shuiwenzhenji']
+  effect:
+    - effect_skill_sure_crit_shuiwenzhenji
+    - effect_skill_consume_shuiwenzhenji
+- id: skill_fansheshuidun
+  element: Water
+  category: Status
+  power: 0
+  accuracy: 100
+  rage: 15
+  priority: 1
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_fantan
+- id: skill_chongnengjizhuangbo
+  element: Water
+  category: Climax
+  power: 165
+  accuracy: 100
+  rage: 100
+  sureHit: true
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_foe_atk_1_stage_30_percent
+- id: skill_yazhi
+  element: Normal
+  category: Physical
+  power: 10
+  accuracy: 100
+  rage: 20
+  priority: -3
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_fanshe
+- id: skill_yapo
+  element: Normal
+  category: Status
+  power: 0
+  accuracy: 95
+  rage: 20
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_foe_atk_1_stage
+    - effect_skill_reduce_foe_spa_1_stage
+- id: skill_huanyu
+  element: Water
+  category: Status
+  power: 0
+  accuracy: 100
+  rage: 20
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_set_weather_yutian
+- id: skill_jishuichuanliu
+  element: Water
+  category: Special
+  power: 110
+  accuracy: 95
+  rage: 20
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_nishui_30_percent
