--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -104,3 +104,6 @@ mark_global_qingtian: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@m
 mark_rouhua: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3012.png'
 mark_zhifanghudun: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/4000.png'
 mark_kongqihudun: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/4001.png'
+mark_fantan: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3006.png'
+mark_shuiwenpingzhang: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/4002.png'
+mark_global_yutian: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/20002.png'
