--- a/data/effect_emblem.yaml
+++ b/data/effect_emblem.yaml
@@ -220,3 +220,27 @@
     type: setMarkDuration
     target: addMarkContext
     value: 10
+- id: effect_emblem_add_crit_rate_5_percent_if_has_shuiwenzhenji
+  trigger: AfterUseSkillCheck
+  priority: 0
+  apply:
+    - type: addCritRate
+      target: usingSkillContext
+      value: 5
+  condition:
+    type: every
+    conditions:
+      - type: checkSelf
+      - type: evaluate
+        evaluator:
+          type: exist
+        target:
+          base: selfMarks
+          chain:
+            - type: whereAttr
+              extractor:
+                type: base
+                arg: baseId
+              evaluator:
+                type: same
+                value: mark_shuiwenzhenji
